# open-weight-computer-vision

./: .gitignore  README.md  pyproject.toml
classification/: README.md  evaluate_labels_only.py  label_results_analysis.py  label_viewer.py
datasets/: README.md  convert_dataset_to_fiftyone_format.py
datasets/example_dataset_formats/yolo_dataset/: dataset.yaml
detection/: README.md  bbox_results_analysis.py  bbox_viewer.py  detect_locations.py
prompts/: prompts.md
static/classifier_dashboard/: dashboard.html
static/detector_dashboard/: dashboard.html
static/detector_perfect_classifier_dashboard/: dashboard.html
